# HoleSpawn

./: .env.example  .gitattributes  .gitignore  MISSION.md  README.md  config.yaml  pyproject.toml  requirements.txt  run_intel.py  subjects.yaml.example  taxonomy.py
config/: pricing.example.yaml
dashboard/: __init__.py  __main__.py  app.py
dashboard/api/: __init__.py  auth.py  campaigns.py  intel.py  jobs.py  targets.py  track.py  traps.py
dashboard/db/: __init__.py  models.py  operations.py  session.py
dashboard/services/: __init__.py  analytics.py  monitor.py  network_analysis.py  queue.py
dashboard/static/: app.js  c2.js  index.html  style.css  tracker.js
data/: sample_discord_export.json  sample_posts.txt
data/examples/: claude_sonnet.txt  doomer.txt  shitposter.txt  tech_optimist.txt
docs/: AUTONOMOUS_OPERATIONS.md  C2_DASHBOARD.md  DESIGN_SYSTEM_REFACTOR.md  DISCORD_INGEST.md  LOCAL_MODELS.md  code-review-network-2026-02-18.md
holespawn/: __init__.py  build_site.py  cache.py  config.py  context.py  cost_tracker.py  demo.py  engagement.py  errors.py  experience.py  llm.py  utils.py  x_scraper.py
holespawn-tui/: Cargo.toml  README.md
holespawn-tui/src/: app.rs  config.rs  event.rs  main.rs  types.rs
holespawn-tui/src/data/: mod.rs  network.rs  profile.rs  scanner.rs
holespawn-tui/src/ui/: browser.rs  compare.rs  graph.rs  help.rs  live.rs  mod.rs  network.rs  node_detail.rs  profile.rs  protocol.rs  recording.rs  report.rs  run_pipeline.rs
holespawn/agent/: __init__.py  __main__.py  autonomous.py  cli.py  evaluator.py  executor.py  social_executor.py  strategies.py  tools.py
holespawn/audience/: __init__.py  map_audience.py  sources.py
holespawn/db/: __init__.py  __main__.py  search.py  store.py
holespawn/delivery/: __init__.py  __main__.py  channels.py  generator.py  run.py
holespawn/generator/: __init__.py  ai_rabbit_hole.py  rabbit_hole.py
holespawn/ingest/: __init__.py  apify_dump_import.py  apify_following.py  apify_twitter.py  community_archive.py  discord.py  harvest_archive.py  loader.py  network.py  twitter_archive.py
holespawn/monitor/: cognitive_landscape.py
holespawn/network/: __init__.py  __main__.py  analyzer.py  apify_network.py  brief.py  community_archive.py  content_overlay.py  engine.py  graph_analysis.py  graph_builder.py  influence_flow.py  moltbook_intel.py  moltbook_poster.py  node_profiler.py  offensive.py  pipeline.py  sensemaking.py  temporal.py  visualizer.py  vulnerability.py  vulnerability_map.py
holespawn/nlp/: __init__.py  discord_analyzer.py
holespawn/profile/: __init__.py  analyzer.py  discord_profile_builder.py  discord_synthesizer.py  substrate_detector.py
scripts/: clean_outputs.py  run_apify_builds.py  validate_data.py
seithar/: __init__.py  pipeline.py  taxonomy.py
tests/: __init__.py  test_basic.py  test_c2_dashboard.py  test_community_archive.py  test_community_archive_live.py  test_discord.py  test_moltbook.py  test_monitor.py  test_network.py  test_network_engine.py  test_offensive.py  test_pipeline.py  test_sct.py  test_sensemaking.py  test_substrate.py  test_temporal.py  test_temporal_cohort.py  test_voice_matching.py
(+59 files in other folders)
