[package]
name = "holespawn-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for HoleSpawn cognitive profiling and network analysis output"

[dependencies]
ratatui = "0.26"
crossterm = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-width = "0.1"
dirs = "5"
toml = "0.8"
walkdir = "2"
notify = "5"
rusqlite = { version = "0.30", features = ["bundled"], optional = true }

[features]
default = []
database = ["rusqlite"]
